utils/yaml-templates/ingress-class-example.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: example-ingress-class
spec:
  controller: example.com/ingress-controller
  parameters:
    apiGroup: example.com/v1
    kind: ExampleIngressParameters
    name: example-ingress-parameters
