utils/yaml-templates/punq-ingress-traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-backend
  namespace: punq
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /backend
