utils/yaml-templates/punq-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: punq-service
    namespace: punq
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: backend
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: frontend
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: websocket
    selector:
        app: punq
